--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# ORM configuration
+quarkus.datasource.jdbc=true
+quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+quarkus.hibernate-orm.log.sql=false
+
 # Run Flyway migrations automatically
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.validate-migration-naming=true
