--- a/.github/actions/build-server/action.yml
+++ b/.github/actions/build-server/action.yml
@@ -15,4 +15,5 @@ runs:
 
     - name: 📦 Build native image using container
       shell: bash
+      working-directory: ./server
       run: ./mvnw clean package -Dnative -Dquarkus.native.container-build=true
