--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -3,6 +3,10 @@ name: Build & Release Finapenses Application
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-server:
     name: Build server native executable
